--- a/Develop/index.html
+++ b/Develop/index.html
@@ -26,11 +26,16 @@
             </ul>
         </div>
     </header>
-    <div class="hero"></div>
-    <div class="content">
+    <!--Added section semantic elements to better describe break down off page by content-->
+    <section class="hero">
+        <img src="./assets/images/digital-marketing-meeting.jpg"
+            alt="Colleagues gathered around table during marketing meeting" />
+    </section>
+    <section class="content">
         <!--Added -->
-        <div id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+        <div id="search-engine-optimization" class="features">
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left"
+                alt="Various features of Search Engine Optimization" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they
@@ -38,8 +43,9 @@
                 your visibility and find the right customers for your business.
             </p>
         </div>
-        <div id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        <div id="online-reputation-management" class="features">
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right"
+                alt="Reputation management tools" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an
@@ -47,8 +53,9 @@
                 you the control over what potential customers see when they search for your business.
             </p>
         </div>
-        <div id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        <div id="social-media-marketing" class="features">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left"
+                alt="Various social media outlets" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you
@@ -56,11 +63,11 @@
                 increase your lead generation.
             </p>
         </div>
-    </div>
+    </section>
     <div class="benefits">
         <div class="benefits-info">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt=" " />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly
                 to your website.
@@ -68,7 +75,7 @@
         </div>
         <div class="benefits-info">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt=" " />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility
                 for your business.
@@ -76,7 +83,7 @@
         </div>
         <div class="benefits-info">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt=" "></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer
                 need to advertise your page.
