--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!--Replaced Div with "header" class with semantic header element-->
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
+        <h1>Hori<span id="seo">seo</span>n</h1>
         <div>
             <ul>
                 <li>
